# catkin_ws_arm

./: README.md
catkin_ws_arm/devel/: .catkin  local_setup.sh
catkin_ws_arm/devel/lib/pkgconfig/: mini_4wd_six_arm.pc  mini_4wd_six_arm_moveit_config.pc  wheeltec_arm_rc.pc
catkin_ws_arm/src/mini_4wd_six_arm/: CMakeLists.txt  package.xml
catkin_ws_arm/src/mini_4wd_six_arm/launch/: display.launch  gazebo.launch
catkin_ws_arm/src/mini_4wd_six_arm/meshes/: left_front_wheel_link.STL  left_rear_wheel_link.STL  right_front_wheel_link.STL  right_rear_wheel_link.STL
catkin_ws_arm/src/mini_4wd_six_arm/urdf/: mini_4wd_six_arm.csv
catkin_ws_arm/src/mini_4wd_six_arm_moveit_config/: .setup_assistant  CMakeLists.txt
catkin_ws_arm/src/mini_4wd_six_arm_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  mini_4wd_six_arm.srdf  myrobot_controllers.yaml  ompl_planning.yaml  ros_controllers.yaml
catkin_ws_arm/src/mini_4wd_six_arm_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  mini_4wd_six_arm_moveit_controller_manager.launch.xml  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
catkin_ws_arm/src/wheeltec_arm_rc/launch/: six_arm_keyboard_teleop.launch
(+4 files in other folders)
